# PolyPtt

./: README.md
g726/: .gitignore  CMakeLists.txt  main.cpp
pttMulticast/: .gitignore  cod.sh  connectionSettings.py  loop.py  playerconv.py  ptt_multicast.py  receiver.py  recorder.py  requirements.txt  server.py
ui/polyPTT-ui/: README.md  package-lock.json  package.json
ui/polyPTT-ui/src/: App.vue
